# bpe-openai-wasm

./: .gitignore  .gitmodules  Cargo.toml  DEVELOPMENT.md  LICENSE  README.md  devenv.nix  package.json  tsconfig.json
bpe-openai-wasm/: .gitignore  Cargo.toml  package.json
bpe-openai-wasm/fixtures/: alice-in-wonderland.txt  code-sample.txt  unicode.txt  very-long.txt
bpe-openai-wasm/src/: lib.rs
fixtures/: pride-and-prejudice.txt  repeated-chars.txt  technical-doc.txt
src/: benchmark.ts  index.test.ts  index.ts  lib.rs
