[package]
name = "bpe-openai-wasm"
version = "0.1.0"
edition = "2021"
description = "WebAssembly bindings for bpe-openai tokenizer"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
bpe-openai = { path = "../rust-gems/crates/bpe-openai" }
wasm-bindgen = "0.2.100"
js-sys = "0.3.77"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["console"] }
getrandom = { version = "0.2.16", features = ["js"] }
console_error_panic_hook = "0.1.7"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["console"] }

[profile.release]
opt-level = 3
lto = true